--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>HTML Tutorial</title>
 </head>
 <body>
-  <p>First paragraph.</p>
+    <h1>This is a heading</h1>
+    <p>First paragraph.</p>
+    <p>This is a paragraph.</p>
     <p>This is a another paragraph.</p>
 </body>
 </html>
